--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Layout TI</title>
-		<meta name="author" content="Latifa Keysha">
+		<meta name="author" content="Gio Aprilino">
 		<link href="assets/style.css" rel="stylesheet">
 		
 	</head>
