ngambil punya opal

--- a/ti-mi.html
+++ b/ti-mi.html
@@ -23,18 +23,9 @@
         </ul>
       </div>
       <div class="content">
-        <h2>Selamat Datang</h2>
+        <h2>Program Studi Manajemen Informatika D3</h2>
         <p>
-          Jurusan Teknologi Informasi menghasilkan tenaga profesional tingkat
-          ahli madya di bidang Teknologi Informasi, khususnya pengelolaan
-          informasi berbasis komputer sehingga mampu bekerja di berbagai
-          instansi, perusahaan organisasi dan bisnis modern.
-        </p>
-        <p>
-          Jurusan Teknologi Informasi memiliki fasilitas yang lengkap seperti
-          Air Conditioner, LED Projector, Labor Komputer dengan spesifikasi yang
-          tinggi, ruangan yang nyaman dan lingkungan yang baik saat pelaksanaan
-          pembelajaran.
+          Memiliki kemampuan membuat aplikasi jaringan komputer internet dan intranet dan mengelola sistem informasi berbasis LAN (Local Area Network) dan Internet untuk berbagai organisasi perkantoran dan bisnis. Menguasai berbagai program aplikasi (programmer)
         </p>
       </div>
       <div class="footer">&copy; 2024 TI PNP | Politeknik Negeri Padang</div>
