--- a/ti-tk.html
+++ b/ti-tk.html
@@ -23,18 +23,9 @@
         </ul>
       </div>
       <div class="content">
-        <h2>Selamat Datang</h2>
+        <h2>Program Studi Teknik Komputer D3</h2>
         <p>
-          Jurusan Teknologi Informasi menghasilkan tenaga profesional tingkat
-          ahli madya di bidang Teknologi Informasi, khususnya pengelolaan
-          informasi berbasis komputer sehingga mampu bekerja di berbagai
-          instansi, perusahaan organisasi dan bisnis modern.
-        </p>
-        <p>
-          Jurusan Teknologi Informasi memiliki fasilitas yang lengkap seperti
-          Air Conditioner, LED Projector, Labor Komputer dengan spesifikasi yang
-          tinggi, ruangan yang nyaman dan lingkungan yang baik saat pelaksanaan
-          pembelajaran.
+          Memiliki kemampuan membangun jaringan komputer internet dan intranet. Mampu memilih model dan infra struktur jaringan untuk berbagai keperluan yang berbeda. Mampu melakukan perawatan, perbaikan sistem jaringan komputer. Mampu menjadi administrator dan programmer.
         </p>
       </div>
       <div class="footer">&copy; 2024 TI PNP | Politeknik Negeri Padang</div>
